# canadian-income-tax

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local  canadian-income-tax.cabal  package-lock.json  stage.sh
app/: Main.hs
data/: 5000-s11-fill-22e.fdf  5000-s11-fill-23e.fdf  5000-s6-fill-22e.fdf  5000-s9-fill-22e.fdf  5000-s9-fill-23e.fdf  5005-r-fill-22e.fdf  5006-c-fill-22e.fdf  5011-r-fill-22e.fdf  5012-r-fill-22e.fdf  5015-r-fill-22e.fdf  t4-fill-24e.fdf
data/428/: 5007-c-fill-22e.fdf  5007-c-fill-23e.fdf  5009-c-fill-22e.fdf  5009-c-fill-23e.fdf  5010-c-fill-22e.fdf  5010-c-fill-23e.fdf
data/479/: 5006-tc-fill-22e.fdf  5006-tc-fill-23e.fdf  5010-tc-fill-22e.fdf
data/T1/fdf/: 5000-r-fill-22e.fdf  5001-r-fill-22e.fdf  5001-r-fill-23e.fdf  5002-r-fill-23e.fdf  5006-r-fill-22e.fdf  5010-r-fill-22e.fdf  5014-r-fill-22e.fdf  5015-r-fill-23e.fdf
data/fdf/: 5000-s11-fill-24e.fdf  5000-s11-fill-25e.fdf  5000-s6-fill-23e.fdf  5000-s6-fill-25e.fdf  5000-s7-fill-23e.fdf  5000-s8-fill-23e.fdf  5000-s8-fill-24e.fdf  5000-s8-fill-25e.fdf  5000-s9-fill-24e.fdf  5000-s9-fill-25e.fdf
data/fdf/428/: 5006-c-fill-23e.fdf  5006-c-fill-24e.fdf  5006-c-fill-25e.fdf  5007-c-fill-24e.fdf  5009-c-fill-24e.fdf  5009-c-fill-25e.fdf  5010-c-fill-24e.fdf  5010-c-fill-25e.fdf
data/fdf/479/: 5006-tc-fill-24e.fdf  5006-tc-fill-25e.fdf  5010-tc-fill-23e.fdf  5010-tc-fill-24e.fdf  5010-tc-fill-25e.fdf
data/fdf/T1/: 5000-r-fill-25e.fdf  5001-r-fill-24e.fdf  5001-r-fill-25e.fdf  5002-r-fill-24e.fdf  5004-r-fill-23e.fdf  5005-r-fill-23e.fdf  5005-r-fill-24e.fdf  5005-r-fill-25e.fdf  5006-r-fill-23e.fdf  5006-r-fill-24e.fdf  5006-r-fill-25e.fdf  5009-r-fill-25e.fdf  5010-r-fill-23e.fdf  5010-r-fill-24e.fdf  5010-r-fill-25e.fdf  5011-r-fill-23e.fdf  5011-r-fill-24e.fdf  5011-r-fill-25e.fdf  5012-r-fill-23e.fdf  5012-r-fill-24e.fdf  5012-r-fill-25e.fdf  5014-r-fill-23e.fdf  5014-r-fill-24e.fdf  5014-r-fill-25e.fdf  5015-r-fill-24e.fdf
dist-newstyle/cache/: compiler  config
forms-data-format/: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  forms-data-format.cabal
forms-data-format/app/: Common.hs  Diff.hs  FdfToPdf.hs  Patch.hs  PdfToFdf.hs  PdfToLabels.hs
forms-data-format/src/Text/: FDF.hs
forms-data-format/src/Text/FDF/: PDF.hs
forms-data-format/src/Text/FDF/PDF/: ContentStream.hs  Decompress.hs  Decrypt.hs  Labels.hs  Parse.hs  Serialize.hs  Types.hs  XRef.hs
forms-data-format/test/: PdfRoundTrip.hs
src/Tax/: Canada.hs  FDF.hs  PDFtk.hs  Util.hs
src/Tax/Canada/: Federal.hs  FormKey.hs  Schedule9.hs  Shared.hs  T1.hs  T4.hs
src/Tax/Canada/Federal/: Schedule11.hs  Schedule6.hs  Schedule7.hs  Schedule8.hs  Schedule9.hs
src/Tax/Canada/ON428/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/: AB.hs  BC.hs  MB.hs  NB.hs  NL.hs  ON.hs  PE.hs  QC.hs
src/Tax/Canada/Province/AB/AB428/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/BC/BC428/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/BC/BC479/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/MB/MB428/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/ON/ON428/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/Province/ON/ON479/: FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/T1/: FDF.hs  FieldNames.hs  Fix.hs  Types.hs
src/Tax/Canada/T1/FieldNames/: AB.hs  BC.hs  NB.hs  NL.hs  NT.hs  NU.hs  ON.hs  PE.hs  QC.hs  YT.hs
src/Tax/Canada/Territory/: NT.hs  NU.hs  YT.hs
test/: Properties.hs  Regression.hs
test/Test/: Transformations.hs
test/regression/inputs/: 5006-r-fill-22e-example1.fdf  5006-r-fill-23e-example1.fdf  5006-r-fill-23e-issue2.fdf  5006-r-fill-23e-unicode1.fdf  5006-r-fill-24e-example1.fdf  5006-r-fill-24e-issue2.fdf  5006-r-fill-24e-unicode1.fdf  5006-r-fill-25e-example1.fdf  5006-r-fill-25e-issue2.fdf  5006-r-fill-25e-unicode1.fdf
test/regression/inputs/example2/: 5000-s6-fill-24e.fdf  5006-r-fill-23e.fdf  5006-r-fill-24e.fdf
test/regression/inputs/example3/: 5000-s6-fill-23e.fdf  5006-c-fill-23e.fdf  5006-c-fill-25e.fdf  5006-r-fill-25e.fdf  t4-fill-24e.fdf
test/regression/inputs/example4/: 5000-s6-fill-25e.fdf  5006-c-fill-24e.fdf  t4-fill-24e-1.fdf  t4-fill-25e-2.fdf
test/regression/reference/: 5006-r-fill-22e-example1.fdf  5006-r-fill-23e-example1.fdf  5006-r-fill-23e-issue2.fdf  5006-r-fill-23e-unicode1.fdf  5006-r-fill-24e-example1.fdf  5006-r-fill-24e-issue2.fdf  5006-r-fill-24e-unicode1.fdf  5006-r-fill-25e-example1.fdf  5006-r-fill-25e-issue2.fdf  5006-r-fill-25e-unicode1.fdf
test/regression/reference/example2/: 5000-s6-fill-23e.fdf  5000-s6-fill-24e.fdf  5000-s6-fill-25e.fdf  5006-c-fill-23e.fdf  5006-c-fill-24e.fdf  5006-c-fill-25e.fdf  5006-r-fill-23e-example1.fdf  5006-r-fill-23e.fdf  5006-r-fill-24e.fdf  5006-r-fill-25e.fdf
test/regression/reference/example3/: 5000-s6-fill-23e.fdf  5000-s6-fill-25e.fdf  5006-c-fill-23e.fdf  5006-c-fill-24e.fdf  5006-r-fill-23e.fdf  5006-r-fill-24e.fdf  5006-r-fill-25e.fdf
test/regression/reference/example4/: 5000-s6-fill-23e.fdf  5000-s6-fill-24e.fdf  5000-s8-fill-23e.fdf  5006-c-fill-23e.fdf  5006-c-fill-24e.fdf  5006-c-fill-25e.fdf  5006-r-fill-23e.fdf  5006-r-fill-24e.fdf
web/: Main.hs
web/client/: package-lock.json  package.json
web/client/public/: index.html  manifest.json
web/client/src/: App.css  App.js  ProcessingMessage.js  index.js  styles.css  t4.js
web/static/: about.html  shared.css  t4.css
