cabal-version:      2.4
name:               canadian-income-tax
version:            2022.2.1

synopsis: Canadian income tax calculation

description: This package provides a library and executable to fill out
             incomplete Canadian tax forms in FDF format and to populate all
             fields therein that can be automatically calculated from the rest
             of the form.

category:           tax, productivity
license:            GPL-3.0-or-later
license-files:      LICENSE
copyright:          (c) 2023 Mario Blažević
author:             Mario Blažević
maintainer:         blamario@protonmail.com
bug-reports:        https://github.com/blamario/canadian-income-tax/issues
tested-with:        ghc == 9.4.4, ghc == 9.6.3

extra-source-files: CHANGELOG.md, README.md
data-dir:           data/
data-files:         *.fdf
source-repository head
  type:     git
  location: https://github.com/blamario/canadian-income-tax

library
    exposed-modules:
        Tax.FDF
        Tax.Canada
        Tax.Canada.Shared
        Tax.Canada.T1.Types
        Tax.Canada.T1.FieldNames
        Tax.Canada.T1.FieldNames.AB
        Tax.Canada.T1.FieldNames.BC
        Tax.Canada.T1.Fix
        Tax.Canada.ON428.Types
        Tax.Canada.ON428.FieldNames
        Tax.Canada.ON428.Fix
        Tax.Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base == 4.*, text >= 1.0 && < 2.2,
                      time == 1.*, containers >= 0.5 && < 0.7,
                      monoid-subclasses == 1.*, rank2classes ^>= 1.5.3, deep-transformations ^>= 0.2.2,
                      ca-province-codes == 1.0.*, forms-data-format ^>= 0.2,
                      template-haskell == 2.*
    hs-source-dirs:   src
    default-language: Haskell2010

executable complete-canadian-taxes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base == 4.*, text, bytestring >= 0.10.4 && < 1, transformers >= 0.1 && < 0.7,
        monoid-subclasses, rank2classes, optparse-applicative >= 0.15 && < 0.18,
        filepath >= 1.3 && < 1.5, directory >= 1.2 && < 1.4, tar >= 0.4 && < 0.6,
        typed-process >= 0.1 && ^>=0.2,
        forms-data-format, canadian-income-tax

    hs-source-dirs:   app
    default-language: Haskell2010


test-suite             properties
    type:                exitcode-stdio-1.0
    build-depends:       base >= 4.7 && < 5, bytestring >= 0.10.4 && < 1,
                         directory ^>= 1.3, filepath ^>= 1.4,
                         forms-data-format,
                         rank2classes, deep-transformations,
                         text, time, ca-province-codes,
                         tasty >= 0.7, tasty-hedgehog ^>= 1.4, hedgehog ^>= 1.4,
                         canadian-income-tax
    hs-source-dirs:      test
    main-is:             Properties.hs
    other-modules:       Test.Transformations
                         Paths_canadian_income_tax
    default-language:    Haskell2010
