cabal-version:      2.4
name:               canadian-income-tax
version:            2022.2.1

synopsis: Canadian income tax calculation

description: This package provides a library and executable to fill out
             incomplete Canadian tax forms in FDF format and to populate all
             fields therein that can be automatically calculated from the rest
             of the form.

category:           tax, productivity
license:            GPL-3.0-or-later
license-files:      LICENSE
copyright:          (c) 2023 Mario Blažević
author:             Mario Blažević
maintainer:         blamario@protonmail.com
bug-reports:        https://github.com/blamario/canadian-income-tax/issues
tested-with:        ghc == 9.4.4, ghc == 9.6.3

extra-source-files: CHANGELOG.md, README.md
data-dir:           data/
data-files:         *.fdf *.pdf
source-repository head
  type:     git
  location: https://github.com/blamario/canadian-income-tax

library
    exposed-modules:
        Tax.FDF
        Tax.Canada
        Tax.Canada.Shared
        Tax.Canada.T1.Types
        Tax.Canada.T1.FieldNames
        Tax.Canada.T1.FieldNames.AB
        Tax.Canada.T1.FieldNames.BC
        Tax.Canada.T1.FieldNames.NB
        Tax.Canada.T1.FieldNames.QC
        Tax.Canada.T1.Fix
        Tax.Canada.ON428.Types
        Tax.Canada.ON428.FieldNames
        Tax.Canada.ON428.Fix
        Tax.PDFtk
        Tax.Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base == 4.*, text >= 1.0 && < 2.2, bytestring >= 0.10.4 && < 1,
                      time == 1.*, containers >= 0.5 && < 0.7,
                      monoid-subclasses == 1.*, rank2classes ^>= 1.5.3, deep-transformations ^>= 0.2.2,
                      ca-province-codes == 1.0.*, forms-data-format ^>= 0.2, typed-process >= 0.1 && ^>=0.2,
                      template-haskell == 2.*
    hs-source-dirs:   src
    default-language: Haskell2010

executable complete-canadian-taxes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base == 4.*, text, bytestring,
        monoid-subclasses, optparse-applicative >= 0.15 && < 0.18,
        filepath >= 1.3 && < 1.5, directory >= 1.2 && < 1.4, tar >= 0.4 && < 0.6,
        ca-province-codes,
        forms-data-format, canadian-income-tax

    hs-source-dirs:   app
    default-language: Haskell2010

executable serve-canadian-taxes
    main-is:          Main.hs
    other-modules:    Paths_canadian_income_tax

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base == 4.*, text, bytestring, filepath >= 1.3 && < 1.5,
        http-types ^>= 0.12, scotty ^>= 0.20, wai-extra ^>= 3.1.10, wai-middleware-static ^>= 0.9.1,
        forms-data-format, canadian-income-tax

    hs-source-dirs:   web
    default-language: Haskell2010
    ghc-options: -threaded

test-suite             properties
    type:                exitcode-stdio-1.0
    build-depends:       base >= 4.7 && < 5, bytestring,
                         directory ^>= 1.3, filepath ^>= 1.4,
                         forms-data-format,
                         rank2classes, deep-transformations,
                         text, time, ca-province-codes,
                         tasty >= 0.7, tasty-hedgehog ^>= 1.4, hedgehog ^>= 1.4,
                         canadian-income-tax
    hs-source-dirs:      test
    main-is:             Properties.hs
    other-modules:       Test.Transformations
                         Paths_canadian_income_tax
    default-language:    Haskell2010

test-suite             regression
    type:                exitcode-stdio-1.0
    build-depends:       base >= 4.7 && < 5, bytestring,
                         directory ^>= 1.3, filepath ^>= 1.4,
                         forms-data-format,
                         rank2classes, deep-transformations,
                         text, time, ca-province-codes,
                         tasty >= 0.7, tasty-golden ^>=2.3,
                         canadian-income-tax
    hs-source-dirs:      test
    main-is:             Regression.hs
    default-language:    Haskell2010
